unpackaged/main/default/objects/inov8__PMT_Setting__mdt/fields/inov8__Allocation_Trigger_Status__c.field-meta.xml
<CustomField>
    <fullName>inov8__Allocation_Trigger_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activates/deactivates the trigger which automates the project sharing. Keep this false, if your sharing model is public read/write for project</description>
    <inlineHelpText>Activates/deactivates the trigger which automates the project sharing. Keep this false, if your sharing model is public read/write for project</inlineHelpText>
    <label>Allocation Trigger Status</label>
    <type>Checkbox</type>
</CustomField>