unpackaged/main/default/objects/inov8__PMT_Setting__mdt/fields/inov8__Default_Availability_for_Scheduler__c.field-meta.xml
<CustomField>
    <fullName>inov8__Default_Availability_for_Scheduler__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The default availability percentage assigned to the users while creating the availabilities</description>
    <inlineHelpText>The default availability percentage assigned to the users while creating the availabilities</inlineHelpText>
    <label>Default Availability for Scheduler</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>