unpackaged/main/default/objects/inov8__PMT_Setting__mdt/validationRules/inov8__Default_Availability_btwn_1_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__Default_Availability_btwn_1_to_100</fullName>
    <active>true</active>
    <description>The default availability should be between 0 to 100</description>
    <errorConditionFormula>inov8__Default_Availability_for_Scheduler__c &lt;0 ||  inov8__Default_Availability_for_Scheduler__c &gt; 100</errorConditionFormula>
    <errorDisplayField>inov8__Default_Availability_for_Scheduler__c</errorDisplayField>
    <errorMessage>The default availability should be between 0 to 100</errorMessage>
</ValidationRule>