unpackaged/main/default/objects/inov8__PMT_Setting__mdt/validationRules/inov8__RP_Years_in_advance_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__RP_Years_in_advance_greater_than_0</fullName>
    <active>true</active>
    <description>Resource planning years in advance should be greater than 0</description>
    <errorConditionFormula>inov8__Resource_Planning_Years_in_Advance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>inov8__Resource_Planning_Years_in_Advance__c</errorDisplayField>
    <errorMessage>Resource planning years in advance should be greater than 0</errorMessage>
</ValidationRule>