unpackaged/main/default/objects/inov8__PMT_Setting__mdt/validationRules/inov8__Start_Month_between_1_and_12.validationRule-meta.xml
<ValidationRule>
    <fullName>inov8__Start_Month_between_1_and_12</fullName>
    <active>true</active>
    <description>Start month for fiscal year setting should be in between 1 and 12</description>
    <errorConditionFormula>inov8__Start_Month_of_Fiscal_Year__c &lt; 1 || inov8__Start_Month_of_Fiscal_Year__c &gt; 12</errorConditionFormula>
    <errorDisplayField>inov8__Start_Month_of_Fiscal_Year__c</errorDisplayField>
    <errorMessage>Start month for fiscal year setting should be in between 1 and 12</errorMessage>
</ValidationRule>